--- a/res/css/load-screen.css
+++ b/res/css/load-screen.css
@@ -49,7 +49,7 @@
   font-size: 1.3rem; /* Font size */
   text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5); /* Text shadow */
   opacity: 1; /* Initial opacity */
-  animation: blink 3s infinite; /* Blinking animation */
+  animation: blink 1s infinite; /* Blinking animation */
 }
 
 #loadtag.hide {
